assets/src/stories-editor/components/block-navigation/edit.css
#amp-story-block-navigation {
	display: none;
	position: absolute;
	left: 45px;
	top: 75px;
	width: 300px;
	z-index: 80;
	list-style-type: none;
	padding: 0;
	margin: 0;
}

@media (min-width: 961px) {

	#amp-story-block-navigation {
		display: block;
	}
}

#amp-story-block-navigation .editor-inserter {
	position: absolute;
	bottom: 100%;
	left: 0;
	width: 100%;
}

#amp-story-block-navigation .components-popover:not(.is-mobile).is-center .components-popover__content {
	transform: translateX(-13%);
}

.post-type-amp_story.folded #amp-story-block-navigation .components-popover:not(.is-mobile):not(.is-middle).is-right .components-popover__content {
	margin-left: -50px;
}

#amp-story-block-navigation .block-editor-block-navigation__list {
	list-style-type: none;
}

#amp-story-block-navigation .components-icon-button .dashicon {
	margin-right: 5px;
}

#amp-story-block-navigation .block-editor-block-navigation__label {
	margin: 0 0 1em;
	text-transform: uppercase;
	font-weight: 500;
	font-size: 12px;
	color: #666;
	letter-spacing: 1px;
}

:root {
	--block-settings-sidebar-width: 280px;
	--admin-menu-expanded-sidebar-width: 160px;
	--admin-menu-collapsed-sidebar-width: 36px;
	--amp-story-content-width: 334px;
	--block-editor-horizontal-margin: 50px;
	--scrollbar-width: 20px;
	--block-navigation-right-margin: 45px;
}

/* Navigator in the context of the open sidebar, settings hidden. */
.post-type-amp_story:not(.folded) .edit-post-layout #amp-story-block-navigation {
	max-width:
		calc(calc(100vw
		-
		var(--admin-menu-expanded-sidebar-width)
		-
		var(--amp-story-content-width)
		-
		calc(var(--block-editor-horizontal-margin) * 2)
		-
		var(--scrollbar-width)) / 2
		-
		var(--block-navigation-right-margin));
}

.post-type-amp_story.folded .edit-post-layout #amp-story-block-navigation {
	max-width:
		calc(calc(100vw
		-
		var(--admin-menu-collapsed-sidebar-width)
		-
		var(--amp-story-content-width)
		-
		calc(var(--block-editor-horizontal-margin) * 2)
		-
		var(--scrollbar-width)) / 2
		-
		var(--block-navigation-right-margin));
}

/* Navigator in the context of minimum available space - open sidebar, settings shown. */
.post-type-amp_story .edit-post-layout.is-sidebar-opened #amp-story-block-navigation {
	max-width:
		calc(calc(100vw
		-
		var(--admin-menu-expanded-sidebar-width)
		-
		var(--block-settings-sidebar-width)
		-
		var(--amp-story-content-width)
		-
		calc(var(--block-editor-horizontal-margin) * 2)
		-
		var(--scrollbar-width)) / 2
		-
		var(--block-navigation-right-margin));
}

/* Navigator in the context of folded sidebar, settings hidden. */
.post-type-amp_story.folded #amp-story-block-navigation {
	max-width: calc(100vw - var(--admin-menu-collapsed-sidebar-width) - var(--amp-story-content-width));
}

/* Navigator in the context of folded sidebar, settings shown. */
.post-type-amp_story.folded .edit-post-layout.is-sidebar-opened #amp-story-block-navigation {
	max-width:
		calc(calc(100vw
		-
		var(--admin-menu-collapsed-sidebar-width)
		-
		var(--block-settings-sidebar-width)
		-
		var(--amp-story-content-width)
		-
		calc(var(--block-editor-horizontal-margin) * 2)
		-
		var(--scrollbar-width)) / 2
		-
		var(--block-navigation-right-margin));
}

/*
 * Hide the toggler and show the block navigation by default on large screens.
 */

@media ( max-width: 960px) {

	.block-editor-block-list__block-edit > div > .editor-selectors {
		display: none;
	}
}

@media (min-width: 961px) {

	.edit-post-header-toolbar #amp-story-shortcuts {
		display: flex;
	}

	.edit-post-visual-editor .editor-post-title__block {
		margin-left: 0;
		margin-right: 0;
	}

	.components-icon-button.block-editor-block-navigation {
		display: none;
	}

	.block-editor-block-navigation__container {
		background: #fff;
		border: 1px solid #eee;
		padding: 1em;
	}

	.block-editor-block-navigation__container .component-editor__selector button {
		background: no-repeat left top;
		padding-left: 37px;
		height: 40px;
		margin: 1px 0 1px 4px;
	}

	.block-editor-block-navigation__container .component-editor__selector .components-button:focus {
		box-shadow: none;
	}

	.components-range-control__number {
		width: 60px;
	}
}

/**
 * Drag & Drop support
 */

.block-editor-block-navigation__list .block-editor-block-navigation__item {
	position: relative;
}

.block-editor-block-navigation__list .block-editor-block-navigation__item-is-dragging {
	cursor: grab;
}

.block-editor-block-navigation__list .block-editor-block-navigation__item .components-drop-zone {
	border: none;
	border-radius: 0;
}

.block-editor-block-navigation__list .block-editor-block-navigation__item .components-drop-zone.is-dragging-over-element .components-drop-zone__content {
	display: none;
}

.block-editor-block-navigation__list .block-editor-block-navigation__item .components-drop-zone.is-close-to-bottom {
	background: none;
	border-bottom: 3px solid #0071a1;
}

.block-editor-block-navigation__list li .block-editor-block-navigation__item .components-drop-zone.is-close-to-top {
	background: none;
	border: none;
}

.block-editor-block-navigation__list li:first-child .block-editor-block-navigation__item .components-drop-zone.is-close-to-top {
	background: none;
	border-top: 3px solid #0071a1;
	border-bottom: none;
}

